# renomia-hackathon

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  init.sql  slides.md
presentation/: slides.html
src/: main.rs  metrics.rs  models.rs
src/pipeline/: gemini.rs  mod.rs  normalizer.rs  ranker.rs
tests/: score.py
training/: expected_100.json  expected_101.json  expected_99.json  input_100.json  input_86.json  input_88.json  input_99.json  raw_dump.jsonl
